*SVN*

* Added :unless clause to validations #8003 [monki]. Example: 

    def using_open_id?
      !identity_url.blank?
    end

    validates_presence_of :identity_url, :if => using_open_id?
    validates_presence_of :username, :unless => using_open_id?
    validates_presence_of :password, :unless => using_open_id?

* Fix #count on a has_many :through association so that it recognizes the :uniq option.  Closes #8801 [lifofifo]

* Fix and properly document/test count(column_name) usage. Closes #8999 [lifofifo]

* Remove deprecated count(conditions=nil, joins=nil) usage.  Closes #8993 [lifofifo]

* Change belongs_to so that the foreign_key assumption is taken from the association name, not the class name.  Closes #8992 [hasmanyjosh]

  OLD
    belongs_to :visitor, :class_name => 'User' # => inferred foreign_key is user_id
    
  NEW
    belongs_to :visitor, :class_name => 'User' # => inferred foreign_key is visitor_id

* Remove spurious tests from deprecated_associations_test, most of these aren't deprecated, and are duplicated in associations_test.  Closes #8987 [lifofifo]

* Make create! on a has_many :through association return the association object.  Not the collection.  Closes #8786 [lifofifo]

* Move from select * to select tablename.* to avoid clobbering IDs. Closes #8889 [dasil003]

* Don't call unsupported methods on associated objects when using :include, :method with to_xml #7307, [manfred, jwilger]

* Define collection singular ids method for has_many :through associations.  #8763 [lifofifo]

* Array attribute conditions work with proxied association collections.  #8318 [kamal, theamazingrando]

* Fix polymorphic has_one associations declared in an abstract class.  #8638 [lifofifo, daxhuiberts]

* Fixed validates_associated should not stop on the first error #4276 [mrj/manfred/josh]

* Rollback if commit raises an exception.  #8642 [kik, Jeremy Kemper]

* Update tests' use of fixtures for the new collections api.  #8726 [kamal]
